deploy/uat/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grc-admin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: grc-admin
  template:
    metadata:
      labels:
        app: grc-admin
    spec:
      serviceAccountName: grc-uat
      containers:
      - name: grc-admin
        image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/pet/grc-uat-ecr:grc-admin-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
        readinessProbe:
          httpGet:
            path: /
            port: 3001
          initialDelaySeconds: 10
          periodSeconds: 20
          timeoutSeconds: 10
