deploy/uat/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grc-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: grc-app
  template:
    metadata:
      labels:
        app: grc-app
    spec:
      serviceAccountName: grc-uat
      volumes:
        - name: one-login-keys-volume
          secret:
            secretName: one-login-keys
      containers:
      - name: grc-app
        image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/pet/grc-uat-ecr:grc-app-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 20
          timeoutSeconds: 10
        volumeMounts:
          - name: one-login-keys-volume
            mountPath: /app/keys
            readOnly: true
