deploy/uat/jwks-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grc-jwks-service
  namespace: grc-uat
spec:
  selector:
    app: grc-jwks
  ports:
    - port: 3003
      targetPort: 3003
