deploy/uat/ingress-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gender-recognition-service-admin
  namespace: grc-uat
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: >-
      194.33.196.0/24,
      194.33.192.0/24,
      51.149.249.0/29,
      51.149.249.32/29,
      51.149.250.0/24,
      81.153.123.31/32,
      90.209.17.46/32,
      90.209.73.29/32,
      128.77.75.64/26,
      86.135.149.138
    nginx.ingress.kubernetes.io/server-snippet: |
      location @custom_403 {
        return 403 "{\"msg\":\"<br/>Gender Recognition Panel<br/>This is a restricted page. Please contact by email or telephone if you need access<br/>GRPenquiries@justice.gov.uk<br>Telephone: 0300 303 5837  Monday to Friday, 9am to 5pm<br/>\"}";
      }
      error_page 403 @custom_403;
    #nginx.ingress.kubernetes.io/custom-http-errors: "403" |
    #  error_page 403 /403.html;
    #  location /403.html {
    #      return 403 '{"error": {"status_code": 403,"status": "Not allowed buddy"}}';
    #  }
    nginx.ingress.kubernetes.io/ssl-protocols: "TLSv1.2 TLSv1.3"
    nginx.ingress.kubernetes.io/ssl-ciphers: "ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305"
    external-dns.alpha.kubernetes.io/set-identifier: gender-recognition-service-admin-grc-uat-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  ingressClassName: default
  tls:
  - hosts:
    - uat.admin.gender-recognition.service.justice.gov.uk
    secretName: gender-recognition-service-admin-secret
  - hosts:
    - uat.dashboard.gender-recognition.service.justice.gov.uk
    secretName: gender-recognition-dashboard-secret

  rules:
  - host: uat.admin.gender-recognition.service.justice.gov.uk
    http:
      paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: grc-admin-service
                port: 
                  number: 3001

  - host: uat.dashboard.gender-recognition.service.justice.gov.uk
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: grc-dashboard-service
              port:
                number: 3002
