deploy/uat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gender-recognition-service
  namespace: grc-uat
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: gender-recognition-service-grc-uat-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    # 5.151.166.193/32, 94.192.178.93/32, 52.167.144.219 belong to David Scott (david.scott@wearegroup.com) who is testing in uat
    nginx.ingress.kubernetes.io/whitelist-source-range: >-
      194.33.196.0/24,
      194.33.192.0/24,
      51.149.249.0/29,
      51.149.249.32/29,
      51.149.250.0/24,
      81.153.123.31/32,
      90.209.17.46/32,
      5.151.166.193/32,
      94.192.178.93/32,
      52.167.144.219/32,
      90.209.73.29/32,
      128.77.75.64/26,
      51.141.82.46/32, 51.141.83.29/32, 51.141.89.174/32, 51.141.94.212/32, 51.141.90.252/32,
      86.135.149.138/32
    nginx.ingress.kubernetes.io/server-snippet: |
      location @custom_403 {
        return 403 "{\"msg\":\"<br/>Gender Recognition Panel<br/>This is a restricted page. Please contact by email or telephone if you need access<br/>GRPenquiries@justice.gov.uk<br>Telephone: 0300 303 5837  Monday to Friday, 9am to 5pm<br/>\"}";
      }
      error_page 403 @custom_403;
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecDefaultAction "phase:2,pass,log,tag:github_team=pet"

      SecRequestBodyLimit 78643200

      SecRule REQUEST_URI "@beginsWith /upload" \
        "id:1000,\
        phase:1,\
        pass,\
        nolog,\
        ctl:ruleRemoveById=951240"
      
      # Disable specific ModSecurity rules related to file size for upload path
      SecRule REQUEST_URI "@beginsWith /upload" \
        "id:1001,\
        phase:1,\
        pass,\
        nolog,\
        ctl:ruleRemoveById=920420"
    nginx.ingress.kubernetes.io/ssl-protocols: "TLSv1.2 TLSv1.3"
    nginx.ingress.kubernetes.io/ssl-ciphers: "ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305"
spec:
  ingressClassName: modsec
  tls:
  - hosts:
    - uat.gender-recognition.service.justice.gov.uk
    secretName: gender-recognition-service-app-secret

  rules:
  - host: uat.gender-recognition.service.justice.gov.uk
    http:
      paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: grc-app-service
                port: 
                  number: 3000
